--- a/styles/@imports/career.scss
+++ b/styles/@imports/career.scss
@@ -2,6 +2,23 @@ $theme:rgb(25,25,112);
 $bgcolor: rgb(0,0,128);
 $color: #eee;
 
+// responsive
+
+$tablet:768px;
+$desktop:840px;
+
+@mixin tablet {
+    @media(min-width: #{$tablet}){
+        @content
+    }
+}
+
+@mixin desktop {
+    @media(min-width: #{$desktop}){
+        @content
+    }
+}
+
 #careers{
     padding: 1.2rem;
     text-align: center;
@@ -17,6 +34,11 @@ $color: #eee;
             justify-content: center;
             align-items: center;
             text-align: center;
+        }
+        @include tablet{
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-column-gap: .5em;
         }
     }
 }
