--- a/styles/@imports/about.scss
+++ b/styles/@imports/about.scss
@@ -2,6 +2,22 @@ $theme:rgb(25,25,112);
 $bgcolor: rgb(0,0,128);
 $color: #eee;
 
+// responsive
+
+$tablet:768px;
+$desktop:1024px;
+
+@mixin tablet {
+    @media(min-width: #{$tablet}){
+        @content
+    }
+}
+
+@mixin desktop {
+    @media(min-width: #{$desktop}){
+        @content
+    }
+}
 
 #about{
     padding: 1.2rem;
