--- a/styles/@imports/about.scss
+++ b/styles/@imports/about.scss
@@ -14,6 +14,9 @@ $desktop:1024px;
 #about{
     padding: 1.2rem;
     text-align: center;
+    @include desktop{
+        min-height: 90vh;
+    }
     h1{
         margin-bottom: 1.2rem;
     }
