--- a/styles/@imports/landing.scss
+++ b/styles/@imports/landing.scss
@@ -2,6 +2,17 @@ $theme:rgb(25,25,112);
 $bgcolor: rgb(0,0,128);
 $color: #eee;
 
+
+// responsive
+$desktop:1024px;
+
+@mixin desktop {
+    @media(min-width: #{$desktop}){
+        @content
+    }
+}
+
+
 #landing{
     background-color: $bgcolor;
     background-image: url('../../assets/Improves-Services-SVG.svg');
@@ -15,6 +26,9 @@ $color: #eee;
     justify-content: center;
     align-items: center;
     color: $color;
+    @include desktop{
+        min-height: 90vh;
+    }
     h1{
         font-size: 1.2em;
         margin-bottom: .2em;
