--- a/styles/@imports/landing.css
+++ b/styles/@imports/landing.css
@@ -25,7 +25,7 @@
 @media (min-width: 1024px) {
   #landing {
     min-height: 80vh;
-    background-size: contain;
+    background-size: cover;
     background-position-x: calc(100% + 6rem);
     background-position-y: 6rem;
   }
