--- a/styles/@imports/landing.scss
+++ b/styles/@imports/landing.scss
@@ -28,7 +28,7 @@ $desktop:1024px;
     color: $color;
     @include desktop{
         min-height: 80vh;
-        background-size: contain;
+        background-size: cover;
         background-position-x: calc(100% + 6rem);
         background-position-y: 6rem;
     }
