--- a/styles/@imports/landing.css
+++ b/styles/@imports/landing.css
@@ -27,7 +27,7 @@
     min-height: 80vh;
     background-size: cover;
     background-position-x: calc(100% + 6rem);
-    background-position-y: 6rem;
+    background-position-y: 0;
   }
 }
 
