--- a/styles/@imports/landing.scss
+++ b/styles/@imports/landing.scss
@@ -30,7 +30,7 @@ $desktop:1024px;
         min-height: 80vh;
         background-size: cover;
         background-position-x: calc(100% + 9rem);
-        background-position-y: 0;
+        background-position-y: -2rem;
     }
     h1{
         font-size: 1.2em;
