--- a/styles/@imports/landing.scss
+++ b/styles/@imports/landing.scss
@@ -31,6 +31,8 @@ $desktop:1024px;
         background-size: cover;
         background-position-x: calc(100% + 14rem);
         background-position-y: -4rem;
+        align-items: flex-start;
+        padding-left: 1.2rem;
     }
     h1{
         font-size: 1.2em;
