--- a/styles/@imports/landing.scss
+++ b/styles/@imports/landing.scss
@@ -33,6 +33,7 @@ $desktop:1024px;
         background-position-y: -4rem;
         align-items: flex-start;
         padding-left: 1.2rem;
+        line-height: 1.75em;
     }
     h1{
         font-size: 1.2em;
