--- a/styles/@imports/landing.css
+++ b/styles/@imports/landing.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
 #landing {
   background-color: navy;
   background-image: url("../../assets/Improves-Services-SVG.svg");
@@ -39,10 +41,12 @@
 #landing h1 {
   font-size: 1.2em;
   margin-bottom: .2em;
+  font-family: 'Open Sans', sans-serif;
 }
 
 #landing p {
   font-size: .8em;
   margin-bottom: .6em;
+  font-family: 'Open Sans', sans-serif;
 }
 /*# sourceMappingURL=landing.css.map */
