--- a/styles/@imports/landing.scss
+++ b/styles/@imports/landing.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+
 $theme:rgb(25,25,112);
 $bgcolor: rgb(0,0,128);
 $color: #eee;
@@ -38,9 +41,11 @@ $desktop:1024px;
     h1{
         font-size: 1.2em;
         margin-bottom: .2em;
+        font-family: 'Open Sans', sans-serif;
     }
     p{
         font-size: .8em;
         margin-bottom: .6em;
+        font-family: 'Open Sans', sans-serif;
     }
 }
