--- a/styles/main.css
+++ b/styles/main.css
@@ -5,3 +5,7 @@
 @import '@imports/career.css';
 @import '@imports/services.css';
 @import '@imports/footer.css';
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+body{
+    font-family: 'Open Sans', sans-serif;
+}
