--- a/styles/@imports/landing.scss
+++ b/styles/@imports/landing.scss
@@ -42,6 +42,9 @@ $desktop:1024px;
         font-size: 1.2em;
         margin-bottom: .2em;
         font-family: 'Open Sans', sans-serif;
+        @include desktop{
+            font-size: 2rem;
+        }
     }
     p{
         font-size: .8em;
