--- a/styles/@imports/landing.scss
+++ b/styles/@imports/landing.scss
@@ -37,6 +37,7 @@ $desktop:1024px;
         align-items: flex-start;
         padding-left: 1.2rem;
         line-height: 1.35em;
+        padding-top: -2rem;
     }
     h1{
         font-size: 1.2em;
