--- a/styles/@imports/landing.css
+++ b/styles/@imports/landing.css
@@ -34,13 +34,13 @@
             align-items: flex-start;
     padding-left: 1.2rem;
     line-height: 1.35em;
-    padding-top: -2rem;
   }
 }
 
 #landing h1 {
   font-size: 1.2em;
   margin-bottom: .2em;
+  margin-top: -2rem;
   font-family: 'Open Sans', sans-serif;
 }
 
