--- a/styles/@imports/landing.css
+++ b/styles/@imports/landing.css
@@ -51,7 +51,7 @@
 
 #landing p {
   font-size: .8em;
-  margin-bottom: .6em;
+  margin-bottom: 1em;
   width: 350px;
 }
 /*# sourceMappingURL=landing.css.map */
