--- a/styles/@imports/landing.scss
+++ b/styles/@imports/landing.scss
@@ -48,7 +48,7 @@ $desktop:1024px;
     }
     p{
         font-size: .8em;
-        margin-bottom: .6em;
+        margin-bottom: 1em;
         width: 350px;
     }
 }
