--- a/styles/@imports/career.scss
+++ b/styles/@imports/career.scss
@@ -34,7 +34,7 @@ $desktop:1024px;
             justify-content: center;
             align-items: center;
             text-align: center;
-            color: $color;
+            color: #999;
         }
         @include tablet{
             display: grid;
