--- a/styles/@imports/career.css
+++ b/styles/@imports/career.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
 #careers {
   padding: 1.2rem;
   text-align: center;
@@ -21,6 +22,10 @@
           align-items: center;
   text-align: center;
   color: #999;
+}
+
+#careers article .career h3 {
+  font-family: 'Open Sans', sans-serif;
 }
 
 @media (min-width: 768px) {
