--- a/styles/@imports/career.scss
+++ b/styles/@imports/career.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+
 $theme:rgb(25,25,112);
 $bgcolor: rgb(0,0,128);
 $color: #eee;
@@ -35,6 +37,9 @@ $desktop:1024px;
             align-items: center;
             text-align: center;
             color: #999;
+            h3{
+                font-family: 'Open Sans', sans-serif;
+            }
         }
         @include tablet{
             display: grid;
