--- a/styles/@imports/career.css
+++ b/styles/@imports/career.css
@@ -25,7 +25,7 @@
 }
 
 #careers article .career h3 {
-  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
 }
 
 @media (min-width: 768px) {
