--- a/styles/@imports/career.scss
+++ b/styles/@imports/career.scss
@@ -38,7 +38,7 @@ $desktop:1024px;
             text-align: center;
             color: #999;
             h3{
-                font-family: 'Open Sans', sans-serif;
+                font-weight: 300;
             }
         }
         @include tablet{
