--- a/styles/@imports/career.css
+++ b/styles/@imports/career.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
 #careers {
   padding: 1.2rem;
   text-align: center;
@@ -21,11 +20,11 @@
       -ms-flex-align: center;
           align-items: center;
   text-align: center;
-  color: #999;
+  color: #2c2c2c;
 }
 
 #careers article .career h3 {
-  font-weight: 300;
+  font-weight: 400;
 }
 
 @media (min-width: 768px) {
