--- a/styles/@imports/career.scss
+++ b/styles/@imports/career.scss
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
-
 $theme:rgb(25,25,112);
 $bgcolor: rgb(0,0,128);
 $color: #eee;
@@ -36,9 +34,9 @@ $desktop:1024px;
             justify-content: center;
             align-items: center;
             text-align: center;
-            color: #999;
+            color: rgb(44, 44, 44);
             h3{
-                font-weight: 300;
+                font-weight: 400;
             }
         }
         @include tablet{
