--- a/styles/@imports/career.scss
+++ b/styles/@imports/career.scss
@@ -26,7 +26,7 @@ $desktop:1024px;
         .career{
             height: 120px;
             background-color: #fff;
-            margin: 1.2rem 0;
+            margin: 1.2rem auto;
             overflow: hidden;
             border-radius: 8px;
             border-bottom: 2px solid $bgcolor;
@@ -35,8 +35,12 @@ $desktop:1024px;
             align-items: center;
             text-align: center;
             color: rgb(44, 44, 44);
+            @include tablet{
+                min-width: 90%;
+            }
             h3{
                 font-weight: 400;
+                font-size: 1rem;
             }
         }
         @include tablet{
