--- a/styles/@imports/footer.scss
+++ b/styles/@imports/footer.scss
@@ -25,6 +25,7 @@ footer{
     padding: 1.2rem;
     padding-bottom: 0;
     color: $color;
+    font-size: .6rem;
     @include tablet{
         display: grid;
         grid-template-columns: repeat(3,1fr);
