--- a/styles/@imports/footer.scss
+++ b/styles/@imports/footer.scss
@@ -34,7 +34,7 @@ footer{
     div{
         margin: 1.2rem 0;
         h2{
-            margin-bottom: .15rem;
+            margin-bottom: .5rem;
         }
     }
     form{
@@ -68,7 +68,7 @@ footer{
         }
         a{
             text-decoration: none;
-            color: $bgcolor;
+            color: $color;
         }
     }
 }
