--- a/styles/@imports/services.css
+++ b/styles/@imports/services.css
@@ -27,6 +27,15 @@
 #services .mock button {
   border-color: #fff;
   color: #fff;
+  outline: none;
+}
+
+#services .mock button:hover {
+  cursor: pointer;
+  background-color: #eee;
+  color: #222;
+  -webkit-transition: all .3s ease-in;
+  transition: all .3s ease-in;
 }
 
 #services .paths {
@@ -45,6 +54,32 @@
           box-shadow: 0 0 25px -11px #eee;
   margin-bottom: .5rem;
   border: 1px solid navy;
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#services .paths div .path .path-icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 @media (min-width: 768px) {
