--- a/styles/@imports/header.css
+++ b/styles/@imports/header.css
@@ -11,6 +11,7 @@ header {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  position: relative;
 }
 
 header h1 {
@@ -18,7 +19,92 @@ header h1 {
   font-size: 1rem;
 }
 
-header label {
+header .menu {
+  -webkit-transform-origin: top;
+          transform-origin: top;
+  -webkit-transform: scale(1, 0);
+          transform: scale(1, 0);
+  position: absolute;
+  width: 100%;
+  top: 100%;
+  left: 0;
+  background: midnightblue;
+  z-index: 100;
+  -webkit-transition: -webkit-transform .3s ease-in;
+  transition: -webkit-transform .3s ease-in;
+  transition: transform .3s ease-in;
+  transition: transform .3s ease-in, -webkit-transform .3s ease-in;
+}
+
+header .menu ul {
+  background: transparent;
+  margin: 1.2em auto;
+  border-radius: 6px;
+  text-align: center;
+  padding: .8em 0;
+}
+
+header .menu ul li {
+  text-transform: uppercase;
+  margin: .8em 0;
+  padding: .5em 0;
+  opacity: 0;
+  color: #eee;
+}
+
+header .menu ul li:hover {
+  cursor: pointer;
+  background-color: navy;
+}
+
+header #menu-trigger {
+  display: none;
+}
+
+header #menu-trigger:checked ~ .menu {
+  -webkit-transform: scale(1, 1);
+          transform: scale(1, 1);
+  -webkit-transition: -webkit-transform .3s ease-in;
+  transition: -webkit-transform .3s ease-in;
+  transition: transform .3s ease-in;
+  transition: transform .3s ease-in, -webkit-transform .3s ease-in;
+}
+
+header #menu-trigger:checked ~ .menu li {
+  opacity: 1;
+  -webkit-transition: opacity .2s ease-in .5s;
+  transition: opacity .2s ease-in .5s;
+}
+
+header #menu-trigger:checked ~ .menu .menu-trigger-label span {
+  background: transparent;
+  -webkit-transition: background .3s ease-in;
+  transition: background .3s ease-in;
+}
+
+header #menu-trigger:checked ~ .menu .menu-trigger-label span:before {
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+header #menu-trigger:checked ~ .menu .menu-trigger-label span:after {
+  width: 28px;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
+header #menu-trigger:checked ~ .menu .menu-trigger-label span:before, header #menu-trigger:checked ~ .menu .menu-trigger-label span:after {
+  -webkit-transition: -webkit-transform .3s ease-in;
+  transition: -webkit-transform .3s ease-in;
+  transition: transform .3s ease-in;
+  transition: transform .3s ease-in, -webkit-transform .3s ease-in;
+}
+
+header #menu-trigger:checked ~ .menu .menu-trigger-label:not(.class) span:before, header #menu-trigger:checked ~ .menu .menu-trigger-label:not(.class) span:after {
+  top: 0;
+}
+
+label {
   height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -31,14 +117,16 @@ header label {
           align-items: center;
 }
 
-header label span {
+label span {
   height: 3px;
   width: 24px;
   background-color: white;
   position: relative;
+  -webkit-transition: all .3s ease-in;
+  transition: all .3s ease-in;
 }
 
-header label span:before, header label span:after {
+label span:before, label span:after {
   position: absolute;
   content: '';
   height: 3px;
@@ -46,11 +134,11 @@ header label span:before, header label span:after {
   background-color: white;
 }
 
-header label span:before {
+label span:before {
   top: -7px;
 }
 
-header label span:after {
+label span:after {
   top: 7px;
 }
 /*# sourceMappingURL=header.css.map */
