--- a/styles/@imports/header.scss
+++ b/styles/@imports/header.scss
@@ -9,9 +9,75 @@ header{
     align-items: center;
     padding: 0 1.2rem;
     justify-content: space-between;
+    position: relative;
     h1{
         color: #fff;
         font-size: 1rem;
+    }
+    .menu{
+        transform-origin: top;
+        transform: scale(1,0);
+        position: absolute;
+        width: 100%;
+        top: 100%;
+        left: 0;
+        background: $theme;
+        z-index: 100;
+        transition: transform .3s ease-in;
+        ul{
+            background: transparent;
+            margin: 1.2em auto;
+            border-radius: 6px;
+            text-align: center;
+            padding: .8em 0;
+            li{
+                text-transform: uppercase;
+                margin: .8em 0;
+                padding: .5em 0;
+                opacity: 0;
+                color: $color;
+                &:hover{
+                    cursor: pointer;
+                    background-color: $bgcolor;
+                }
+            }
+        }
+    }
+    #menu-trigger{
+        display: none;
+        &:checked~.menu{
+            transform: scale(1,1);
+            transition: transform .3s ease-in;
+            li{
+                opacity: 1;
+                transition: opacity .2s ease-in .5s;
+            }
+            .menu-trigger-label{
+                span{
+                    background: transparent;
+                    transition: background .3s ease-in;
+                    &:before{
+                        transform: rotate(45deg);
+                    }
+                    &:after{
+                        width: 28px;
+                        transform: rotate(-45deg);
+                    }
+                    &:before,
+                    &:after{
+                        transition: transform .3s ease-in;
+                    }
+                }
+                &:not(.class){
+                    span{
+                        &:before,&:after{
+                            top: 0;
+                        }
+                    }
+                }
+                }
+            } 
+        }
     }
     label{
         height: 100%;
@@ -23,6 +89,7 @@ header{
             width: 24px;
             background-color: white;
             position: relative;
+            transition: all .3s ease-in;
             &:before,&:after{
                 position: absolute;
                 content: '';
@@ -38,4 +105,3 @@ header{
             }
         }
     }
-}
