--- a/pages/styles/bootcamp.scss
+++ b/pages/styles/bootcamp.scss
@@ -13,6 +13,9 @@ $color: #eee;
 body,html{
     height: 100%;
 }
+h1,h2,h3,h4,h5,h6,p{
+    font-family: 'Open Sans', sans-serif;
+}
 html{
     font-size: calc(1em + 1vw);
     font-family: 'Open Sans', sans-serif;
