--- a/pages/styles/bootcamp.css
+++ b/pages/styles/bootcamp.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
 *, *::before, ::after {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -10,8 +11,13 @@ body, html {
   height: 100%;
 }
 
+h1, h2, h3, h4, h5, h6, p {
+  font-family: 'Open Sans', sans-serif;
+}
+
 html {
   font-size: calc(1em + 1vw);
+  font-family: 'Open Sans', sans-serif;
 }
 
 section {
