--- a/pages/styles/bootcamp.scss
+++ b/pages/styles/bootcamp.scss
@@ -9,6 +9,25 @@ $color: #eee;
     margin: 0;
     list-style: none;
 }
+$tablet: 758px;
+$desktop: 1020px;
+@mixin tablet {
+    @media screen and (min-width: #{$tablet}){
+        @content
+    }
+}
+
+@mixin mobile {
+    @media screen and (max-width: #{$tablet}){
+        @content
+    }
+}
+
+@mixin desktop {
+    @media screen and (min-width: #{$desktop}){
+        @content
+    }
+}
 
 body,html{
     height: 100%;
@@ -29,6 +48,9 @@ section{
     padding: 4rem 1.2rem;
     background-color: $bgcolor;
     color: $color;
+    background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.9),rgba(0, 0, 0, 0.9)),url('../../assets/bg1.jpg');
+    background-position: center;
+    background-size: cover;
     p{
         margin: 1em 0;
     }
@@ -56,22 +78,39 @@ section{
     }
 }
 #cards{
+    @include tablet{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-column-gap: 1rem;
+    }
+    @include desktop{
+        grid-template-columns: repeat(3, 1fr);
+    }
     article{
         margin: 1rem 0;
         h2{
             margin-bottom: .8rem;
             color: $bgcolor;
+            font-size: .8rem;
         }
         .card{
+            p{                
+                font-size: .6rem;
+                @include tablet{
+                    font-size: .55rem;
+                }
+            }
             span{
                 color: rgb(230, 214, 4);
             }
-            border: 2px solid $theme;
-            border-left: .3rem solid $bgcolor;
-            margin: .3rem 0;
-            padding: .4rem;
-            border-bottom-left-radius: .2rem;
-            border-top-left-radius: .2rem;
+            margin: .4rem 0;
+            @include mobile{                
+                border: 2px solid $theme;
+                border-left: .3rem solid $bgcolor;
+                padding: .4rem;
+                border-bottom-left-radius: .2rem;
+                border-top-left-radius: .2rem;
+            }
         }
     }
 }
@@ -81,22 +120,199 @@ section{
     text-align: center;
     h2{
         color: $theme;
+        font-size: .8rem;
     }
     ul{
         text-align: left;
         list-style: none;
+        margin-top: 1rem;
         li{
             margin: .2rem 0;
+            font-size: .6rem;
         }
     }
     button{
         background-color: transparent;
         padding: .4rem .8rem;
-        font-size: .8rem;
+        font-size: .6rem;
         border-radius: .2rem;
         outline: 0;
         border: 2px solid $bgcolor;
         color: $theme;
         margin: 1rem 0;
+    }
+}
+#projects{
+    text-align: center;
+    h2{
+        margin-bottom: 1rem;
+        color: $theme;
+    }
+    .holder{
+        @include tablet{
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-gap: .6rem 1.2rem;
+        }
+        @include desktop{
+            grid-template-columns: repeat(3, 1fr);
+        }
+    }
+    .project-item{
+        text-align: left;
+        min-height: 10vh;
+        display: flex;
+        flex-direction: row;
+        margin: .5rem 0;
+        border-radius: .5rem;
+        overflow: hidden;
+        box-shadow: 0 0 20px 0px rgb(243, 241, 241);
+        &:hover{
+            box-shadow: 0 0 20px -2px rgb(221, 219, 219);
+            transition: all ease-in-out .2s;
+        }
+        .number{
+            width: 80px;
+            background-color: $theme;
+            color: $color;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 2rem;
+        }
+        div{
+            display: flex;
+            align-items: center;
+            padding-left: .5rem;
+            p{
+                font-size: .6rem;
+            }
+        }
+
+    }
+}
+#requirement{
+        text-align: center;
+        clip-path: polygon(0% 0%,100% 0%,100% 90%, 0% 100%);
+        @include tablet{
+            background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.8) 50%,rgba(0, 0, 0, 0.8) 50%),url('../../assets/ab.jpg');
+            background-size: cover;
+            background-position: bottom;
+            background-attachment: fixed;
+            color: $color;
+        }
+        h3{
+            margin-bottom: .5rem;
+        }
+    div{
+        @include tablet{
+            display: grid;
+            grid-template-columns: repeat(2,1fr);
+        }
+        aside{
+            @include tablet {
+                min-height: 42vh;
+            }
+            grid-column: 2/3;
+            p{
+                font-size: .6rem;
+                text-align: left;
+            }
+            ul{
+                text-align: left;
+                margin-top: .5rem;
+                li{
+                    font-size: .6rem;
+                    list-style: circle;
+                    margin-left: 1.2rem;
+                }
+            }
+            .icons{
+                margin-top: 1rem;
+                display: flex;
+                img{
+                    border-radius: 50%;
+                    width: 50px;
+                    margin: 10px;
+                }
+            }
+        }
+    }
+    
+}
+#terms{
+    @include tablet{
+        padding: 2rem 3rem;
+        padding-bottom: 0;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-column-gap: 1.5rem;
+    }
+    .category{
+        margin-bottom: .8rem;
+        h3{
+            margin-bottom: .5rem;
+            color: $theme;
+        }
+        p{
+            font-size: .6rem;
+        }
+    }
+}
+#rewards{
+    .grid{
+        @include tablet{
+            display: grid;
+            grid-template-columns: 1.3fr 1fr;
+        }
+    }
+    h2{
+        margin-bottom: .8rem;
+        text-align: center;
+        color: $theme;
+    }
+    h4{
+        margin-bottom: .4rem;
+        font-size: .8rem;
+    }
+    p{
+        font-weight: bold;
+        margin-top: .8rem;
+        font-size: .8rem;
+    }
+    ul{
+        margin-top: .2rem;
+        padding-left: 1.2rem;
+        li{
+            list-style: circle;
+            font-size: .6rem;
+        }
+    }
+}
+#duration{
+    text-align: center;
+    h2{
+        margin-bottom: .5rem;
+        color: $theme;
+    }
+    p{
+        font-size: .6rem;
+    }
+    h4{
+        margin: .5rem 0;
+        color: rgb(230, 214, 4);
+    }
+    .grid-wrap{
+        @include tablet{
+            text-align: center;
+        }
+        @include desktop{
+            padding: 0 7rem;
+        }
+    }
+}
+footer{
+    @include tablet{
+        clip-path: polygon(0% 0%,100% 15%,100% 100%, 0% 100%);
     }
 }
