--- a/styles/@imports/footer.css
+++ b/styles/@imports/footer.css
@@ -12,8 +12,13 @@ footer {
     display: grid;
     -ms-grid-columns: (1fr)[3];
         grid-template-columns: repeat(3, 1fr);
-    grid-column-gap: .5em;
+    grid-column-gap: 1rem;
   }
+}
+
+footer ul li {
+  cursor: pointer;
+  margin-bottom: .3rem;
 }
 
 footer div {
