--- a/styles/@imports/footer.scss
+++ b/styles/@imports/footer.scss
@@ -29,7 +29,13 @@ footer{
     @include tablet{
         display: grid;
         grid-template-columns: repeat(3,1fr);
-        grid-column-gap: .5em;
+        grid-column-gap: 1rem;
+    }
+    ul{
+        li{
+            cursor: pointer;
+            margin-bottom: .3rem;
+        }
     }
     div{
         margin: 1.2rem 0;
