--- a/pages/styles/bootcamp.css
+++ b/pages/styles/bootcamp.css
@@ -27,7 +27,7 @@ section {
 #bootcamp-barner {
   text-align: center;
   padding: 4rem 1.2rem;
-  background-color: navy;
+  background-color: #000080;
   color: #eee;
   background-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.9)), to(rgba(0, 0, 0, 0.9))), url("../../assets/bg1.jpg");
   background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), url("../../assets/bg1.jpg");
@@ -57,9 +57,9 @@ section {
 
 .curriculum-barner button {
   font-size: .8rem;
-  color: navy;
+  color: #000080;
   padding: .4rem .8rem;
-  border: 2px solid midnightblue;
+  border: 2px solid #191970;
   background-color: transparent;
   margin-top: .5rem;
 }
@@ -87,7 +87,7 @@ section {
 
 #cards article h2 {
   margin-bottom: .8rem;
-  color: navy;
+  color: #000080;
   font-size: .8rem;
 }
 
@@ -111,8 +111,8 @@ section {
 
 @media screen and (max-width: 758px) {
   #cards article .card {
-    border: 2px solid midnightblue;
-    border-left: 0.3rem solid navy;
+    border: 2px solid #191970;
+    border-left: 0.3rem solid #000080;
     padding: .4rem;
     border-bottom-left-radius: .2rem;
     border-top-left-radius: .2rem;
@@ -125,7 +125,7 @@ section {
 }
 
 #other h2 {
-  color: midnightblue;
+  color: #191970;
   font-size: .8rem;
 }
 
@@ -146,8 +146,8 @@ section {
   font-size: .6rem;
   border-radius: .2rem;
   outline: 0;
-  border: 2px solid navy;
-  color: midnightblue;
+  border: 2px solid #000080;
+  color: #191970;
   margin: 1rem 0;
 }
 
@@ -157,7 +157,7 @@ section {
 
 #projects h2 {
   margin-bottom: 1rem;
-  color: midnightblue;
+  color: #191970;
 }
 
 @media screen and (min-width: 758px) {
@@ -203,7 +203,7 @@ section {
 
 #projects .project-item .number {
   width: 80px;
-  background-color: midnightblue;
+  background-color: #191970;
   color: #eee;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -320,11 +320,20 @@ section {
 
 #terms .category h3 {
   margin-bottom: .5rem;
-  color: midnightblue;
+  color: #191970;
 }
 
 #terms .category p {
   font-size: .6rem;
+}
+
+@media screen and (min-width: 758px) {
+  #rewards {
+    background-image: url("../../assets/illustration-1.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: right;
+  }
 }
 
 @media screen and (min-width: 758px) {
@@ -339,7 +348,7 @@ section {
 #rewards h2 {
   margin-bottom: .8rem;
   text-align: center;
-  color: midnightblue;
+  color: #191970;
 }
 
 #rewards h4 {
@@ -369,7 +378,7 @@ section {
 
 #duration h2 {
   margin-bottom: .5rem;
-  color: midnightblue;
+  color: #191970;
 }
 
 #duration p {
