--- a/pages/styles/mentors.scss
+++ b/pages/styles/mentors.scss
@@ -82,7 +82,7 @@ section{
 }
 // Main
 #landing{
-    height: calc(100vh - 70px);
+    height: 100vh;
     background-color: $bgcolor;
 }
 #mentors{
