--- a/styles/@imports/header.css
+++ b/styles/@imports/header.css
@@ -8,7 +8,8 @@ header {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  position: relative;
+  position: fixed;
+  width: 100%;
 }
 
 @media screen and (min-width: 758px) {
