--- a/styles/@imports/landing.css
+++ b/styles/@imports/landing.css
@@ -6,7 +6,7 @@
   background-repeat: no-repeat;
   background-position-x: 12rem;
   background-position-y: 7rem;
-  height: 50vh;
+  height: calc(50vh + 60px);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -25,7 +25,7 @@
 
 @media (min-width: 1024px) {
   #landing {
-    min-height: 80vh;
+    min-height: 100vh;
     background-size: cover;
     background-position-x: calc(100% + 14rem);
     background-position-y: -4rem;
