--- a/pages/styles/bootcamp.scss
+++ b/pages/styles/bootcamp.scss
@@ -101,7 +101,7 @@ section{
                 }
             }
             span{
-                color: rgb(230, 214, 4);
+                color: #e6d604;
             }
             margin: .4rem 0;
             @include mobile{                
