--- a/pages/styles/mentors.css
+++ b/pages/styles/mentors.css
@@ -16,6 +16,10 @@ html {
   font-family: 'Open Sans', sans-serif;
 }
 
+#link {
+  color: midnightblue;
+}
+
 section {
   padding: 1.2rem;
   min-height: 50vh;
@@ -81,9 +85,49 @@ section div .image {
 #landing {
   height: 100vh;
   background-color: navy;
+  background-image: url("../../assets/bg.svg");
+  background-repeat: no-repeat;
+  background-size: 60%;
+  background-position-x: 120%;
+  background-position-y: 70px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+#landing #intro {
+  margin-bottom: 2rem;
+}
+
+#landing #intro h1 {
+  color: #000;
+  text-align: left;
+  margin: 0;
+  margin-bottom: 1rem;
+  font-size: 2.2rem;
+}
+
+#landing #intro p {
+  font-size: 1.3rem;
+}
+
+#landing #intro button {
+  font-size: 24px;
+  margin-top: .8rem;
+  border: transparent;
+  background-color: navy;
+  color: #fff;
+  padding: .45rem 1.5rem;
+  border-radius: 2rem;
 }
 
 #mentors {
-  background: white;
+  background: url("/assets/mentors/mentors.svg");
+  background-repeat: no-repeat;
+  background-size: 2rem;
+  background-position-y: 8rem;
 }
 /*# sourceMappingURL=mentors.css.map */
