--- a/pages/styles/mentors.scss
+++ b/pages/styles/mentors.scss
@@ -39,6 +39,9 @@ html{
     font-size: calc(1em + 1vw);
     font-family: 'Open Sans', sans-serif;
 }
+#link{
+    color: $theme;
+}
 section{
     padding: 1.2rem;
     min-height: 50vh;
@@ -84,7 +87,39 @@ section{
 #landing{
     height: 100vh;
     background-color: $bgcolor;
+    background-image: url('../../assets/bg.svg');
+    background-repeat: no-repeat;
+    background-size: 60%;
+    background-position-x: 120%;
+    background-position-y: 70px;
+    display: flex;
+    align-items: flex-end;
+    #intro{     
+        margin-bottom: 2rem;
+        h1{
+            color: #000;
+            text-align: left;
+            margin: 0;
+            margin-bottom: 1rem;
+            font-size: 2.2rem;
+        }
+        p{
+            font-size: 1.3rem;
+        }
+        button{
+            font-size: 24px;
+            margin-top: .8rem;
+            border: transparent;
+            background-color: $bgcolor;
+            color: #fff;
+            padding: .45rem 1.5rem;
+            border-radius: 2rem;
+        }
+    }
 }
 #mentors{
-    background: white;
+    background: url('/assets/mentors/mentors.svg');
+    background-repeat: no-repeat;
+    background-size: 2rem;
+    background-position-y: 8rem;
 }
