--- a/styles/@imports/header.css
+++ b/styles/@imports/header.css
@@ -10,6 +10,8 @@ header {
           justify-content: space-between;
   position: fixed;
   width: 100%;
+  top: 0;
+  z-index: 9999999;
 }
 
 @media screen and (min-width: 758px) {
