--- a/styles/@imports/header.scss
+++ b/styles/@imports/header.scss
@@ -24,6 +24,8 @@ header{
     justify-content: space-between;
     position: fixed;
     width: 100%;
+    top: 0;
+    z-index: 9999999;
     @include tablet{
         padding: 0 0.8rem;
     }
