--- a/pages/styles/mentors.scss
+++ b/pages/styles/mentors.scss
@@ -246,8 +246,14 @@ section{
             width: 100%;
             margin: .5rem;
             text-align: center;
+            box-shadow: 0 0 25px -12px #eee;
+            padding: 1rem .6rem;
+            border-radius: .5rem;
             @include tablet{
                 width: 30vw;
+                box-shadow: none;
+                padding: 0;
+                border-radius: 0;
             }
             @include desktop {
                 width: 20vw;
@@ -294,10 +300,17 @@ section{
             flex-wrap: wrap;
             .item{
                 width: 100%;
-                margin: .5rem;
                 text-align: center;
+                margin: .5rem 0;
+                box-shadow: 0 0 25px -12px #eee;
+                padding: 1rem .6rem;
+                border-radius: .5rem;
                 @include tablet{
                     width: 20vw;
+                    margin: .5rem;
+                    box-shadow: none;
+                    padding: 0;
+                    border-radius: 0;
                 }
                 .picture{
                     width: 100px;
